# rail-baron

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml  client-deploy.yml
client/: Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html  input.css  tailwind.config.js
client-map/: Cargo.toml  index.html
client-map/src/: app.rs  cities.rs  city.rs  main.rs  rails.rs
client/src/: app.rs  cities.rs  city.rs  lib.rs  login.rs  main.rs  map.rs  rails.rs  test.txt
client/src/game/: cities.rs  city.rs  game.rs  mod.rs  player.rs  rails.rs
client/src/game/debug/: events.rs  mod.rs  player.rs  rail.rs  state.rs
client/src/pre_game/: home.rs  join.rs  layout.rs  lobby.rs  mod.rs  rules.rs
client/style/: output.css
server/: Cargo.toml  Dockerfile  state.json
server/src/: main.rs
store/: Cargo.toml  rail-baron.csv  test.rs
store/src/: city.rs  computer.rs  deed.rs  dice.rs  lib.rs  main.rs  main_city.rs  payout.rs  rail.rs  rail_road.rs  region.rs  state.rs  sub_city.rs  travel_payout.rs
