[package]
name = "client"
version = "0.0.1"
edition = "2021"
rust-version = "1.75.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
store = { path = "../store" }

gloo-events = "0.1"
gloo-utils = "0.1"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Document", "Element", "HtmlAnchorElement", "Window"] }
random_color = { version = "0.6.1", features = ["wasm-bindgen"] }
leaflet = "0.2.3"
