[package]
name = "client-map"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
store = { path = "../store" }

console_error_panic_hook = "0.1"
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
leptos-leaflet = { git = "https://github.com/LukeHalasy/leptos-leaflet.git", default-features = false, features = [
    "csr",
] }
# leptos-leaflet = { path = "../../leptos-leaflet/leptos-leaflet", default-features = false, features = [
#     "csr",
# ] }
bincode = "1.3.1"
reqwasm = "0.4.0"
futures = "0.3.29"
