[package]
name = "client-map"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
store = { path = "../store" }

console_error_panic_hook = "0.1"
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5.2", features = ["csr", "nightly"] }
# leptos-leaflet = { git = "https://github.com/LukeHalasy/leptos-leaflet.git", rev="2b6551409b91a861f286d2fe1792275e68add911", default-features = false, features = [
#     "csr",
# ] }
leptos-leaflet = { git = "https://github.com/LukeHalasy/leptos-leaflet.git", rev="e80dbfa3b630919ad380c8c1e7e872d6cc415f4c", default-features = false, features = [
    "csr",
] }

# leptos-leaflet = { path = "../../leptos-leaflet/leptos-leaflet", default-features = false, features = [
#     "csr",
# ] }
bincode = "1.3.1"
reqwasm = "0.4.0"
futures = "0.3.29"
strum = { version = "0.25.0", features = ["derive"] }
leptos_router = { version = "0.5.2", features = ["csr", "nightly"] }
serde_json = "1.0.108"
gloo-timers = { version = "0.3.0", features = ["futures"] }

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

# ....

[package.metadata.leptos]
# ....
lib-profile-release = "wasm-release"
