[package]
name = "server"
version = "0.0.1"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
store = { path = "../store" }
serde = { version = "1", features = ["derive"] }
bincode = "1.3.1"
log = "0.4"
env_logger="0.9.0"
tokio = { version = "1.33.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
futures-util = "0.3.28"
futures-channel = "0.3.28"
