[package]
name = "store"
version = "0.0.1"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
paste = "1.0.14"
convert_case = "0.6.0"
strum = { version = "0.25.0", features = ["derive"] }
geoutils = "0.5.1"
rand = "0.8.5"
once_cell = "1.18.0"
lazy_static = "1.4.0"
